# istoreos

./: .config  .gitignore  Index.mk  README.md  bpiw2_defconfig  dist.sh  feeds.conf.default  openwrt  public.config  rtd1296_defconfig  rules.mk  version
.github/: ISSUE_TEMPLATE.md
.github/workflows/: c-cpp.yml
config/: Config-build.in  Config-images.in  Config-kernel.in
include/: host-build.mk  image.mk  kernel-build.mk  kernel-defaults.mk  kernel-version.mk  kernel.mk  netfilter.mk  prereq-build.mk  quilt.mk  target.mk  toplevel.mk  version.mk
package/base-files/: Makefile  image-config.in
package/boot/arm-trusted-firmware-rockchip-vendor/: Makefile  atf-version.mk
package/boot/grub2/: Makefile
package/boot/rtk-init/: Makefile
package/boot/rtk-rescue-firmware/: Makefile
package/boot/uboot-amlogic-prebuilt/: Makefile
package/boot/uboot-realtek/: Makefile
package/boot/uboot-rk35/: Makefile
package/boot/uboot-rk35xx/: Makefile
package/boot/uboot-rockchip/: Makefile
package/diy/ddns-scripts_dnspod/: Makefile
package/diy/dkml/: Makefile
package/diy/dummy-kmods/: Makefile
package/diy/grub-conf/: Makefile
package/diy/luci-app-aria2/: Makefile
package/diy/luci-app-diskman/: Makefile
package/diy/luci-app-eqos/: Makefile
package/diy/luci-app-ota/: Makefile
package/diy/ntfs3-mount/: Makefile
package/istoreos-files/: Makefile  image-config.in
package/utils/rtd129x_env/src/: CMakeLists.txt  README.MD  crc32.c  crc32.h  env.c  env.h  hashtable.c  io.c  io.h  rtk_env.c  rtk_factory_sign.c  search.h  tar.c  tar.h
scripts/: download.pl  gen_image_generic.sh
template/: README.files.head.md  README.log.head.md  README.md
tools/: Makefile
tools/rtd129x_img_gen/: Makefile
tools/rtd129x_img_gen/src/: CMakeLists.txt  README.MD  WjCryptLib_Sha256.c  WjCryptLib_Sha256.h  decode_hwsetting.c  encode_hwsetting.c  fwtbl.h  hash.c  hash.h  io.c  io.h  layout.c  layout.h  layout_json.c  mbr.h  rtd129x_bootcode_gen.c  rtd129x_img_gen.c
(+1493 files in other folders)
